header text border and height added

--- a/template.css
+++ b/template.css
@@ -9,8 +9,14 @@ body{
     background-color: white;
 }
 
+header * {
+    color: white;
+}
+
 header .logo{
     float: left;
+    border: 1px solid whitesmoke;
+    height: inherit;
 }
 
 header ul {
