navbar links spacing and font size changed

--- a/template.css
+++ b/template.css
@@ -43,6 +43,12 @@ header ul li {
     float:left;
 }
 
+header ul li a {
+    display: block;
+    padding: 21px;
+    font-size: 1.1em;
+}
+
 header .menu-toggle{
     display: none;
 }
