--- a/template.css
+++ b/template.css
@@ -62,7 +62,13 @@ header ul li ul {
     top:66px;
     right:0px;
     width: 130px;
+    display:none;
 }
+
+header ul li:hover ul{
+    display:block;
+}
+
 
 header ul li ul li {
     width:100%;
