changes to header UL
header ul height limitation added and overflow is now hidden

--- a/template.css
+++ b/template.css
@@ -90,9 +90,12 @@ header ul li ul li a:hover{
 
 /* MEDIA QUERIES */
 @media only screen and (max-width:750px){
+    
     header ul {
         width:100%;
         background: rgb(255, 83, 83);
+         max-height: 0px;
+        overflow: hidden;
     }
 
     header ul li{
